# computer-architecture-assessment-one-starter

./: CMakeLists.txt  README.md  gatorgrade.yml
.github/workflows/: build.yml
environment/: unix.bash
evalugator/: CMakeLists.txt  mock.h  test.c
insight/: insight-report-20231212-04-36-10.json  insight-report-20231212-04-36-35.json  insight-report-20231212-07-48-14.json  insight-report-20231212-07-49-45.json  insight-report-20231212-07-56-28.json  insight-report-20231212-07-58-03.json  insight-report-20231212-11-57-23.json
source/: CMakeLists.txt  assessment.c
source/data/: sensor.c
source/headers/: assessment.h  heap.h  timing.h
